# mx-node

./: .gitignore  Cargo.toml  README.md  install.sh  rust-toolchain.toml
.github/workflows/: binary-size-matrix.yml  integration.yml  release.yml
bins/mxnode/: Cargo.toml
bins/mxnode/src/: cli.rs  commands.rs  errors.rs  events.rs  main.rs  orchestrator.rs
bins/mxnode/src/commands/: add_nodes.rs  bench_render.rs  benchmark.rs  cleanup.rs  completions.rs  config.rs  config_apply.rs  dashboard.rs  db.rs  doctor.rs  import_bash.rs  init.rs  install.rs  install_add.rs  keys.rs  keys_rename.rs  lifecycle.rs  logs.rs  metrics.rs  migrate.rs  multikey.rs  observers.rs  placeholder.rs  prompts.rs  reapply_config.rs  rebuild_state.rs  rename.rs  rollback.rs  seednode.rs  self_update.rs  status.rs  uninstall.rs  unlock.rs  upgrade.rs  version.rs
bins/mxnode/src/orchestrator/: acquirer.rs  acquirer_factory.rs  adopt.rs  common_settings.rs  config_repo.rs  install.rs  legacy.rs  runtime.rs  selector.rs  supervisor.rs  tag_resolver.rs  update_gate.rs
bins/mxnode/tests/: cli.rs
crates/mxnode-build/: Cargo.toml
crates/mxnode-build/src/: lib.rs
crates/mxnode-config/: Cargo.toml
crates/mxnode-config/src/: lib.rs  loader.rs  origin.rs  resolve.rs  validate.rs  xdg.rs
crates/mxnode-core/: Cargo.toml
crates/mxnode-core/src/: config.rs  error.rs  file.rs  lib.rs  paths.rs  platform.rs  state.rs  types.rs
crates/mxnode-github/: Cargo.toml
crates/mxnode-github/src/: lib.rs
crates/mxnode-rpc/: Cargo.toml
crates/mxnode-rpc/src/: lib.rs
crates/mxnode-state/: Cargo.toml
crates/mxnode-state/src/: binstore.rs  inflight.rs  lib.rs  process.rs  store.rs
crates/mxnode-systemd/: Cargo.toml
crates/mxnode-systemd/src/: adoption.rs  ctl.rs  discovery.rs  journald.rs  lib.rs  plist.rs  render.rs  tomledit.rs
crates/mxnode-toolchain/: Cargo.toml
crates/mxnode-toolchain/src/: lib.rs
crates/mxnode-tui/: Cargo.toml
crates/mxnode-tui/src/: app.rs  bench.rs  journal_tail.rs  lib.rs  log_tail.rs  metrics.rs  poller.rs  theme.rs  view.rs  ws_log.rs
crates/mxnode-tui/tests/fixtures/: snapshot_observer.json  snapshot_validator.json
crates/mxnode-update/: Cargo.toml
crates/mxnode-update/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: build.rs  cli.rs  csv.rs  lib.rs  main.rs  matrix.rs  measure.rs  report.rs  toml_patch.rs  tools.rs  winners.rs
crates/xtask/tests/: csv_roundtrip.rs  matrix_ids.rs  toml_patch_idempotent.rs  winners_select.rs
docs/: bash-capability-matrix.md
docs/superpowers/plans/: 2026-05-04-binary-size-harness.md
docs/superpowers/specs/: 2026-05-04-binary-size-design.md  2026-05-04-binary-size-results-baseline.md  2026-05-05-binary-size-phase1-results.md  2026-05-05-binary-size-rollout.md
tests/integration/: doc-parity.sh  sweep.sh
