[workspace]
resolver = "2"
members = [
    "crates/mxnode-core",
    "crates/mxnode-config",
    "crates/mxnode-state",
    "crates/mxnode-github",
    "crates/mxnode-rpc",
    "crates/mxnode-systemd",
    "crates/mxnode-toolchain",
    "crates/mxnode-build",
    "crates/mxnode-tui",
    "crates/mxnode-update",
    "crates/xtask",
    "bins/mxnode",
]

[workspace.package]
version = "0.8.24"
edition = "2021"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
repository = "https://github.com/XOXNO/mx-node"
authors = ["Mihai Eremia"]

[workspace.dependencies]
# Internal crates
mxnode-core      = { path = "crates/mxnode-core" }
mxnode-config    = { path = "crates/mxnode-config" }
mxnode-state     = { path = "crates/mxnode-state" }
mxnode-github    = { path = "crates/mxnode-github" }
mxnode-rpc       = { path = "crates/mxnode-rpc" }
mxnode-systemd   = { path = "crates/mxnode-systemd" }
mxnode-toolchain = { path = "crates/mxnode-toolchain" }
mxnode-build     = { path = "crates/mxnode-build" }
mxnode-tui       = { path = "crates/mxnode-tui" }
mxnode-update    = { path = "crates/mxnode-update" }

# Foundational
anyhow       = "1.0"
thiserror    = "2.0"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
toml         = "0.8"
toml_edit    = "0.22"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI / config
clap   = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"
figment = { version = "0.10", features = ["toml", "env"] }
dirs   = "5.0"

# I/O
tokio   = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "stream"] }
fs2     = "0.4"
tempfile = "3"

# Domain
semver = "1.0"
time   = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }

# Unix-specifics (used in mxnode-state for kill(pid,0) and process birth time)
libc = "0.2"

# TUI
ratatui   = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"

# WebSocket + protobuf for live log streaming
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect"] }
prost     = "0.13"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

[profile.release]
# Aggressive size-first profile per the binary-size matrix harness
# results in docs/superpowers/specs/2026-05-04-binary-size-design.md
# and the rollout/results docs alongside it. Combined effect on the
# four release targets:
#
#   - aarch64-apple-darwin:   5.85 MB → 3.40 MB  (-41.9%)
#   - x86_64-apple-darwin:    6.50 MB → 4.13 MB  (-39.3%)
#   - aarch64-unknown-linux:  5.91 MB → 4.08 MB  (-34.2%)
#   - x86_64-unknown-linux:   7.01 MB → 4.85 MB  (-34.0%)
#
# Trade-off: `opt-level = "z"` raises TUI render time per 1000 frames
# from ~160 ms to ~490 ms, i.e. ~0.49 ms per frame vs ~0.16 ms. The
# dashboard ticks every 250 ms so this is invisible at runtime — the
# operator sees no FPS regression. Cold start is unchanged (~1-2 ms).
# `lto = "fat"` extends release builds (~60-70 s for the mxnode bin
# vs ~35 s with thin), only meaningful for release.yml + manual
# release builds; dev `cargo build` is unaffected.
#
# A further ~10% reduction is available via Stage E (nightly +
# `-Zbuild-std` + `-Cpanic=immediate-abort`); shipped as an opt-in
# `-min` artefact in release.yml, not as a global default — see the
# rollout spec.
lto = "fat"
opt-level = "z"
codegen-units = 1
strip = "symbols"
panic = "abort"
