[package]
name = "mxnode-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared domain types for the mxnode workspace."

[dependencies]
serde       = { workspace = true }
thiserror   = { workspace = true }
time        = { workspace = true }
semver      = { workspace = true }
toml        = { workspace = true }
