[package]
name = "mxnode-github"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ETag-cached GitHub release client for mxnode."

[dependencies]
mxnode-core = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
time        = { workspace = true }
sha2        = "0.10"
hex         = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
