[package]
name = "mxnode-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed REST client for the local MultiversX node + proxy."

[dependencies]
mxnode-core = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tokio-tungstenite = { workspace = true }
prost       = { workspace = true }
futures-util = { workspace = true }
time        = { workspace = true }
tracing     = { workspace = true }
