[package]
name = "mxnode-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "state.toml read/write, atomic rename, flock, transaction log for mxnode."

[dependencies]
mxnode-core = { workspace = true }
serde       = { workspace = true }
toml        = { workspace = true }
toml_edit   = { workspace = true }
thiserror   = { workspace = true }
tempfile    = { workspace = true }
fs2         = { workspace = true }
time        = { workspace = true }
tracing     = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
