[package]
name = "mxnode-systemd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "systemd unit rendering and systemctl wrappers for mxnode."

[dependencies]
mxnode-core = { workspace = true }
serde       = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
toml        = { workspace = true }
toml_edit   = { workspace = true }
dirs        = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tempfile    = { workspace = true }
