[package]
name = "mxnode-toolchain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Detect (don't install) the Go toolchain mxnode-build needs."

[dependencies]
mxnode-core = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
semver      = { workspace = true }
